--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=product-service
 spring.profiles.active=dev
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/mydatabase
+spring.datasource.url=jdbc:postgresql://localhost:5435/product_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.hikari.maximum-pool-size=10
 
-server.port=80826
+server.port=8086
