--- a/shop-service/src/main/resources/application.properties
+++ b/shop-service/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=shop-service
 spring.profiles.active=dev
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/mydatabase
+spring.datasource.url=jdbc:postgresql://localhost:5434/shop_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.hikari.maximum-pool-size=10
