--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,11 +1,53 @@
 spring.application.name=api-gateway
-
 spring.profiles.active=dev
-
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/mydatabase
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.datasource.hikari.maximum-pool-size=10
-
 server.port=8080
+
+spring.cloud.gateway.server.webflux.routes[0].id=auth-service
+spring.cloud.gateway.server.webflux.routes[0].uri=http://localhost:8081
+spring.cloud.gateway.server.webflux.routes[0].predicates[0]=Path=/api/auth/**
+
+spring.cloud.gateway.server.webflux.routes[1].id=cart-service
+spring.cloud.gateway.server.webflux.routes[1].uri=http://localhost:8082
+spring.cloud.gateway.server.webflux.routes[1].predicates[0]=Path=/api/users/**
+
+spring.cloud.gateway.server.webflux.routes[2].id=notification-service
+spring.cloud.gateway.server.webflux.routes[2].uri=http://localhost:8083
+spring.cloud.gateway.server.webflux.routes[2].predicates[0]=Path=/api/users/**
+
+spring.cloud.gateway.server.webflux.routes[3].id=order-service
+spring.cloud.gateway.server.webflux.routes[3].uri=http://localhost:8084
+spring.cloud.gateway.server.webflux.routes[3].predicates[0]=Path=/api/users/**
+
+spring.cloud.gateway.server.webflux.routes[4].id=payment-service
+spring.cloud.gateway.server.webflux.routes[4].uri=http://localhost:8085
+spring.cloud.gateway.server.webflux.routes[4].predicates[0]=Path=/api/users/**
+
+spring.cloud.gateway.server.webflux.routes[5].id=product-service
+spring.cloud.gateway.server.webflux.routes[5].uri=http://localhost:8086
+spring.cloud.gateway.server.webflux.routes[5].predicates[0]=Path=/api/users/**
+
+spring.cloud.gateway.server.webflux.routes[6].id=promotion-service
+spring.cloud.gateway.server.webflux.routes[6].uri=http://localhost:8087
+spring.cloud.gateway.server.webflux.routes[6].predicates[0]=Path=/api/users/**
+
+spring.cloud.gateway.server.webflux.routes[7].id=review-service
+spring.cloud.gateway.server.webflux.routes[7].uri=http://localhost:8088
+spring.cloud.gateway.server.webflux.routes[7].predicates[0]=Path=/api/users/**
+
+spring.cloud.gateway.server.webflux.routes[8].id=search-service
+spring.cloud.gateway.server.webflux.routes[8].uri=http://localhost:8089
+spring.cloud.gateway.server.webflux.routes[8].predicates[0]=Path=/api/users/**
+
+spring.cloud.gateway.server.webflux.routes[9].id=shop-service
+spring.cloud.gateway.server.webflux.routes[9].uri=http://localhost:8090
+spring.cloud.gateway.server.webflux.routes[9].predicates[0]=Path=/api/users/**
+
+spring.cloud.gateway.server.webflux.routes[10].id=user-service
+spring.cloud.gateway.server.webflux.routes[10].uri=http://localhost:8091
+spring.cloud.gateway.server.webflux.routes[10].predicates[0]=Path=/api/users/**
+
+spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].allowedOrigins=*
+spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].allowedMethods=GET,POST,PUT,DELETE
+spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].allowedHeaders=*
+
+jwt.secret=12356465489121321
