--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -4,8 +4,16 @@ spring.profiles.active=dev
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5433/user_db
+spring.jpa.properties.hibernate.default_schema=user_schema
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.hikari.maximum-pool-size=10
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=none
+
+
 
 server.port=8091
