--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.datasource.password=postgres
 spring.jpa.properties.hibernate.default_schema=auth_schema
 spring.datasource.hikari.maximum-pool-size=10
 
+spring.kafka.bootstrap-servers=localhost:9092
+
 jwt.secret=1234567890123456789012345678901221312564687415
 jwt.expiration=3600000
 jwt.refresh-expiration=604800000
