--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -8,4 +8,8 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.hikari.maximum-pool-size=10
 
+cloudinary.cloud-name=drl8zhbtg
+cloudinary.api-key=153111163262254
+cloudinary.api-secret=aqXmd3_6PtLbAK_Gsdu8q4pqM_Y
+
 server.port=8086
