--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -64,6 +64,11 @@
             <artifactId>hypersistence-utils-hibernate-60</artifactId>
             <version>3.9.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.cloudinary</groupId>
+            <artifactId>cloudinary-http44</artifactId>
+            <version>1.39.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
