handle images + refactor product

--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -8,6 +8,13 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.hikari.maximum-pool-size=10
 
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=product-service-group
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+
 cloudinary.cloud-name=drl8zhbtg
 cloudinary.api-key=153111163262254
 cloudinary.api-secret=aqXmd3_6PtLbAK_Gsdu8q4pqM_Y
