--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -75,6 +75,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>hust.hoangson</groupId>
+            <artifactId>common-kafka</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
