store temp add cart

--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.password=postgres
 spring.datasource.hikari.maximum-pool-size=10
 
 server.port=8084
+
+gateway.url=http://localhost:8080
