add module cart and feign client config

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>shop-service</module>
         <module>user-service</module>
         <module>common-kafka</module>
+        <module>clients</module>
 
     </modules>
 
