--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5435/product_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.hikari.maximum-pool-size=10
+spring.jpa.properties.hibernate.default_schema=product_schema
+
 
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=product-service-group
