--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -79,6 +79,11 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
             <version>4.3.0</version>
         </dependency>
+        <dependency>
+            <groupId>hust.hoangson</groupId>
+            <artifactId>clients</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 	<build>
