--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -6,7 +6,12 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5437/order_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.jpa.properties.hibernate.default_schema=product_schema
+
 spring.datasource.hikari.maximum-pool-size=10
+
+
+spring.kafka.bootstrap-servers=localhost:9092
 
 server.port=8084
 
