--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5437/order_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.properties.hibernate.default_schema=order_schema
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=DEBUG
 
 spring.datasource.hikari.maximum-pool-size=10
 
