--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=auth-service
 spring.profiles.active=dev
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5431/auth_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/multi_vendor
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.properties.hibernate.default_schema=auth_schema
