--- a/payment-service/src/main/resources/application.properties
+++ b/payment-service/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=payment-service
 spring.profiles.active=dev
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5438/payment_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/multi_vendor
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.hikari.maximum-pool-size=10
