--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=user-service
 spring.profiles.active=dev
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5433/user_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/multi_vendor
 spring.jpa.properties.hibernate.default_schema=user_schema
 spring.datasource.username=postgres
 spring.datasource.password=postgres
